# provenance

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile.binaries  LICENSE  README.md  build.docker.sh  build.sh  config.nix  default.nix  shell.nix  test.sh
binaries/jwt-check/: Cargo.toml
binaries/jwt-check/src/: app.rs  jwt.rs  main.rs
binaries/jwt-check/src/app/: cli.rs  constant.rs
binaries/jwt-check/src/jwt/: constant.rs
binaries/jwt-check/src/pubkey/: cli.rs  constant.rs
crates/binary/: Cargo.toml
crates/binary/src/: lib.rs  roughtime.rs
crates/binary/src/roughtime/: chain.rs  client.rs  crypto.rs  env.rs  json.rs
crates/binary/src/roughtime/ecosystem/: env.rs  server.rs
crates/binary/src/roughtime/ecosystem/server/: address.rs  public_key.rs
crates/content/: Cargo.toml
crates/content/src/: lib.rs
crates/core/: Cargo.toml
crates/core/src/: content.rs  device.rs  env.rs  error.rs  jwt.rs  lib.rs  roughtime.rs
crates/core/src/device/: keys.rs  signature.rs
crates/core/src/jwt/: token.rs
crates/crypto/: Cargo.toml
crates/crypto/src/: ed25519.rs  error.rs  lib.rs  sha512.rs
crates/crypto/src/ed25519/: keypair.rs  public.rs  secret.rs  signature.rs
crates/device/: Cargo.toml
crates/device/src/: error.rs  keys.rs  lib.rs  signature.rs
crates/env/: Cargo.toml
crates/env/src/: env.rs  error.rs
crates/idp/: Cargo.toml
crates/idp/src/: error.rs  key.rs  lib.rs
crates/input/: Cargo.toml
crates/input/src/: device.rs  error.rs  jwt.rs  lib.rs  roughtime.rs
crates/input/src/ed25519/: signature.rs
crates/input/src/roughtime/: chain.rs  client.rs
crates/json/src/: error.rs  lib.rs
crates/jwt/: Cargo.toml
crates/jwt/src/: error.rs  idp.rs  lib.rs  signature.rs  token.rs
crates/provenance/: Cargo.toml
crates/provenance_core/: Cargo.toml
crates/provenance_core/src/: env.rs  error.rs  json.rs  lib.rs
crates/roughtime/: Cargo.toml
crates/roughtime/src/: chain.rs  crypto.rs  ecosystem.rs  error.rs  lib.rs
crates/roughtime/src/ecosystem/: env.rs  error.rs  json.rs  server.rs
crates/roughtime/src/ecosystem/server/: address.rs  public_key.rs
crates/version/: Cargo.toml
crates/version/src/: lib.rs
src/: content.rs  crypto.rs  device.rs  env.rs  error.rs  json.rs  jwt.rs  lib.rs  roughtime.rs  version.rs
src/device/: signature.rs
src/jwt/: idp.rs  token.rs
src/roughtime/: chain.rs  client.rs  ecosystem.rs
src/roughtime/ecosystem/: env.rs  json.rs  server.rs
src/roughtime/ecosystem/server/: address.rs  public_key.rs
zomes/: Cargo.toml  build.rs
zomes/crypto/: Cargo.toml
zomes/crypto/src/: lib.rs
zomes/src/: lib.rs
