[package]
name = "humm_provenance_binary"
version = "0.0.1"
description = "binary for humm provenance"
license = "MIT"
homepage = "https://humm.earth"
documentation = "https://github.com/hummhive/provenance"
authors = [ "David Meister <thedavidmeister@gmail.com>" ]
edition = "2018"

[dependencies]
humm_provenance_core = { path = "../core" }
rand = "0.7"
ed25519-dalek = "1.0.0-pre.3"
serde_json = "1.0.53"
ring = "0.13"
roughenough = "1.1.8"
