[package]
name = "humm_provenance_env"
version = "0.0.1"
description = "handle environment variables for humm provenance"
license = "MIT"
homepage = "https://humm.earth"
documentation = "https://github.com/hummhive/provenance"
authors = [ "David Meister <thedavidmeister@gmail.com>" ]
edition = "2018"

[dependencies]
thiserror = "1.0.18"
