[package]
name = "humm_provenance_input"
version = "0.0.1"
description = "create a humm provenance from input data"
license = "MIT"
homepage = "https://humm.earth"
documentation = "https://github.com/hummhive/provenance"
authors = [ "David Meister <thedavidmeister@gmail.com>" ]
edition = "2018"

[dependencies]
thiserror = "1.0.18"
serde = { version = "=1.0.104", features = [ "derive" ] }
serde_json = "1.0.53"
base64 = "0.12.1"
ed25519-dalek = "1.0.0-pre.3"
rand = "0.7"
sha2 = "0.8.1"
chrono = "0.4"
byteorder = "1"
humm_provenance_device = { path = "../device" }
humm_provenance_version = { path = "../version" }
humm_provenance_content = { path = "../content" }
humm_provenance_jwt = { path = "../jwt" }
humm_provenance_crypto = { path = "../crypto" }
roughenough = "1.1.8"

[dependencies.humm_provenance_roughtime]
path = "../roughtime"
features = [ "rng", "client" ]

[dependencies.jwt-compact]
version = "0.2.0"
default-features = false
features = [ "ed25519-dalek" ]
