[package]
name = "humm_jwt"
version = "0.0.1"
description = "low level types and traits for humm jwt handling"
license = "MIT"
homepage = "https://humm.earth"
documentation = "https://github.com/hummhive/provenance"
authors = [ "David Meister <thedavidmeister@gmail.com>" ]
edition = "2018"

[dependencies]
thiserror = "1.0.18"
serde = { version = "=1.0.104", features = [ "derive" ] }
humm_crypto = { path = "../crypto" }
humm_provenance_roughtime = { path = "../roughtime" }
humm_provenance_device = { path = "../device" }
humm_provenance_idp = { path = "../idp" }
base64 = "0.12.1"
rand = "0.7"
serde_json = "1.0.53"
anyhow = "1"
chrono = "0.4"

[dependencies.jwt-compact]
git = "https://github.com/slowli/jwt-compact"
ref = "e22f11457c3bf9c4275150478f1f1c5ccdbd96a0"
default-features = false
features = [ "ed25519-compact" ]
