[package]
name = "humm_provenance_core"
version = "0.0.1"
description = "low level types and traits for humm provenance"
license = "MIT"
homepage = "https://humm.earth"
documentation = "https://github.com/hummhive/provenance"
authors = [ "David Meister <thedavidmeister@gmail.com>" ]
edition = "2018"

[dependencies]
thiserror = "1.0.18"
serde = "1.0.110"
serde_json = "1.0.53"
