[package]
name = "humm_provenance_roughtime"
version = "0.0.1"
description = "roughtime protocol for humm provenances"
license = "MIT"
homepage = "https://humm.earth"
documentation = "https://github.com/hummhive/provenance"
authors = [ "David Meister <thedavidmeister@gmail.com>" ]
edition = "2018"

[dependencies]

roughenough = "1.1.8"
