[package]
name = "humm_zome_crypto"
version = "0.0.1"
authors = [ "thedavidmeister", "thedavidmeister@gmail.com" ]
edition = "2018"

# [profile.dev]
# opt-level = "z"
#
# [profile.release]
# opt-level = "z"

# Ensure that this is not inside of any other workspace.
# This crate should be an implementation detail of test_utils_wasm and
# therefore shouldn't be mentioned in the top-level Cargo.toml
[workspace]

[lib]
name = "humm_zome_crypto"
crate-type = [ "cdylib", "rlib" ]

[dependencies]
# holochain_serialized_bytes = "=0.0.40"
# holochain_wasmer_guest = "=0.0.35"
# holochain_zome_types = { version = "=0.0.1", path = "../../../zome_types" }

# serde = "=1.0.104"
# ed25519-dalek = "1.0.0-pre.3"
humm_provenance_crypto = { path = "../../crates/crypto" }
humm_provenance_content = { path = "../../crates/content" }
humm_provenance_device = { path = "../../crates/device" }
humm_provenance_jwt = { path = "../../crates/jwt" }
humm_provenance_version = { path = "../../crates/version" }
humm_provenance_roughtime = { path = "../../crates/roughtime" }
# test_wasm_common = { version = "=0.0.1", path = "../../wasm_common" }

# [dependencies.jwt-compact]
# version = "0.2.0"
# default-features = false
# features = [ "ed25519-dalek" ]

[patch.crates-io]
